--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/helloButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/hello"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="396dp" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/helloButton"
+        app:layout_constraintBottom_toTopOf="@id/editText"
+        android:text=""
+        tools:layout_editor_absoluteX="175dp"
+        tools:layout_editor_absoluteY="503dp" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        android:text=""
+        android:inputType="text"
+        android:textAlignment="center"
+        android:importantForAutofill="no"
+        android:hint="@string/editText"
+        android:textColorHint="@color/black"
+        android:textColor="@color/black"
+        tools:layout_editor_absoluteX="178dp"
+        tools:layout_editor_absoluteY="569dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
